--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -1,9 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 626,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<div style=\"text-align: center;\">\n",
+    "    <h1>TD VI: Inteligencia Artificial</h1>\n",
+    "    <h2>Trabajo práctico 2 </h2>\n",
+    "    <h3>Integrantes:</h3>\n",
+    "</div>\n",
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "    <h4><ul>\n",
+    "        <li>Noguera Azul</li>\n",
+    "        <li>Gonzalez Rocio</li>\n",
+    "        <li>Guledjian Patricio</li>\n",
+    "        </ul>\n",
+    "    </h4>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 653,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -34,6 +58,14 @@
    "source": [
     "# Load the competition data\n",
     "df = pd.read_csv(\"competition_data.csv\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Análisis Exploratorio de Datos"
    ]
   },
   {
@@ -1760,13 +1792,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 651,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%%capture\n",
-    "model_xgb_1 = XGBClassifier(n_jobs=3, use_label_encoder=False)"
+    "#### Prueba 1"
    ]
   },
   {
@@ -1775,6 +1805,16 @@
    "metadata": {},
    "source": [
     "Se realiza una primera prueba haciendo un unico job, pocas iteraciones y pocos splits en el cross validation con el fin de que demore poco y ver la performance rapidamente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 651,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "model_xgb_1 = XGBClassifier(n_jobs=3, use_label_encoder=False)"
    ]
   },
   {
@@ -1907,7 +1947,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prueba 2 (mejorando los parametros): \n"
+    "#### Prueba 2 (mejorando los parametros): \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "model_xgb_2 = XGBClassifier(n_jobs=3, use_label_encoder=False)"
    ]
   },
   {
@@ -2062,7 +2112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ahora utilicemos los parametros que mejor performance dieron para volver a entrenar los datos."
+    "#### Prueba 3:"
    ]
   },
   {
@@ -2070,7 +2120,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prueba 3:"
+    " Ahora utilicemos los parametros que mejor performance dieron para volver a entrenar los datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "model_xgb_3 = XGBClassifier(n_jobs=3, use_label_encoder=False)"
    ]
   },
   {
