--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -1859,6 +1859,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# One Hot-Encoding\n",
+    "# df = pd.get_dummies(df, \n",
+    "#     sparse=True,\n",
+    "#     columns=[\n",
+    "#         \"logistic_type\", \n",
+    "#         \"platform\",\n",
+    "#         \"is_pdp\"\n",
+    "#     ],\n",
+    "#     dtype=int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tags = df['tags']"
    ]
   },
