--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -3032,13 +3032,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "# Búsqueda aleatoria\n",
-    "random_search = RandomizedSearchCV(clf, param_distributions=param_dist, n_iter=50, cv=5, scoring='roc_auc', n_jobs=-1, random_state=12)\n",
+    "random_search = RandomizedSearchCV(clf, param_distributions=param_dist, n_iter=50, cv=kf, scoring='roc_auc', n_jobs=-1, random_state=12)\n",
     "\n",
     "random_search.fit(X_train, y_train)"
    ]
