--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 70,
    "metadata": {
     "tags": [
      "hide"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 71,
    "metadata": {
     "tags": [
      "hide"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "Name: cat_warranty, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        "[199972 rows x 2 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
        "Index(['full_name', 'title', 'tags'], dtype='object')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
        "27"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['name'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,77 +1683,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definir las columnas a las que se aplicará Target Encoding\n",
-    "columns_to_TE = ['name']\n",
+    "# # Definir las columnas a las que se aplicará Target Encoding\n",
+    "# columns_to_TE = ['name']\n",
     "\n",
-    "target_encoder = TargetEncoder()\n",
-    "X_train[columns_to_TE] = target_encoder.fit_transform(X_train[columns_to_TE], y_train)\n",
-    "X_test[columns_to_TE] = target_encoder.transform(X_test[columns_to_TE])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Balaceo de clases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 554,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0    164017\n",
-       "1.0     16744\n",
-       "Name: conversion, dtype: int64"
-      ]
-     },
-     "execution_count": 554,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 555,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resampler = TomekLinks(sampling_strategy='majority')\n",
-    "X_train, y_train = resampler.fit_resample(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0    157836\n",
-       "1.0     16744\n",
-       "Name: conversion, dtype: int64"
-      ]
-     },
-     "execution_count": 556,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.value_counts()"
+    "# target_encoder = TargetEncoder()\n",
+    "# X_train[columns_to_TE] = target_encoder.fit_transform(X_train[columns_to_TE], y_train)\n",
+    "# X_test[columns_to_TE] = target_encoder.transform(X_test[columns_to_TE])"
    ]
   },
   {
@@ -3002,7 +2950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3021,58 +2969,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crear modelo LGBM\n",
-    "clf = lgbm.LGBMClassifier(max_depth=-1, random_state=314, metric='None', n_jobs=-1, class_weight='balanced', \n",
+    "clf = lgbm.LGBMClassifier(max_depth=-1, random_state=14, metric='None', n_jobs=-1, class_weight='balanced', \n",
     "                         scale_pos_weight = sum(y_train == 0) / sum(y_train == 1), boost_from_average=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import KFold\n",
     "\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=42)"
+    "kf = KFold(n_splits=5, shuffle=True, random_state=142)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "# Búsqueda aleatoria\n",
-    "random_search = RandomizedSearchCV(clf, param_distributions=param_dist, n_iter=50, cv=kf, scoring='roc_auc', n_jobs=-1, random_state=12)\n",
+    "random_search = RandomizedSearchCV(clf, param_distributions=param_dist, n_iter=100, cv=kf, scoring='roc_auc', n_jobs=-1, random_state=16)\n",
     "\n",
     "random_search.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'colsample_bytree': 0.4348501673009197,\n",
-       " 'min_child_samples': 187,\n",
-       " 'min_child_weight': 1,\n",
-       " 'n_estimators': 1099,\n",
-       " 'num_leaves': 45,\n",
+       "{'colsample_bytree': 0.5806995951635777,\n",
+       " 'min_child_samples': 309,\n",
+       " 'min_child_weight': 100.0,\n",
+       " 'n_estimators': 1016,\n",
+       " 'num_leaves': 49,\n",
        " 'reg_alpha': 50,\n",
        " 'reg_lambda': 1,\n",
-       " 'subsample': 0.21646759543664196}"
+       " 'subsample': 0.3294439387905145}"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,16 +3031,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8944583716400217"
+       "0.8940834407287961"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3100,11 +3048,46 @@
    "source": [
     "random_search.best_score_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.94188807e-01, 1.92908032e-04, 6.55602193e-01, ...,\n",
+       "       1.16118724e-03, 7.69513315e-01, 6.80960351e-06])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Predict on the evaluation set\n",
+    "y_pred_lgbm = random_search.predict_proba(X_test)[:,1]\n",
+    "y_pred_lgbm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make the submission file\n",
+    "submission_df = pd.DataFrame({\"ROW_ID\": test_data[\"ROW_ID\"], \"conversion\": y_pred_lgbm})\n",
+    "submission_df[\"ROW_ID\"] = submission_df[\"ROW_ID\"].astype(int)\n",
+    "submission_df.to_csv(\"lgbm.csv\", sep=\",\", index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.18 ('td6')",
    "language": "python",
    "name": "python3"
   },
@@ -3120,7 +3103,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9410b6c5dd4317948e8f63737cd76d406110fb44e35bd0de6cb2229df8a5fae8"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
